--- a/package.json
+++ b/package.json
@@ -4,14 +4,15 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "prod": "webpack && node ./dist/bundle.js",
-    "dev": "nodemon ./src/index.ts"
+    "start:prod": "webpack && node ./dist/bundle.js",
+    "start:dev": "nodemon ./src/index.ts"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
     "@types/node": "^18.0.0",
+    "@types/uuid": "^8.3.4",
     "@typescript-eslint/eslint-plugin": "^5.28.0",
     "@typescript-eslint/parser": "^5.28.0",
     "dotenv": "^16.0.1",
@@ -23,6 +24,7 @@
     "ts-loader": "^9.3.0",
     "ts-node": "^10.8.1",
     "typescript": "^4.7.3",
+    "uuid": "^8.3.2",
     "webpack": "^5.73.0",
     "webpack-cli": "^4.10.0"
   }
