--- a/.eslintrc
+++ b/.eslintrc
@@ -3,14 +3,13 @@
     "node": true
   },
   "parser": "@typescript-eslint/parser",
-  "extends": [
-    "plugin:@typescript-eslint/recommended",
-    "prettier/@typescript-eslint",
-    "plugin:prettier/recommended"
-  ],
+  "extends": ["plugin:@typescript-eslint/recommended", "plugin:prettier/recommended"],
   "parserOptions": {
+    "project": ["tsconfig.json"],
     "ecmaVersion": "latest",
     "sourceType": "module"
   },
-  "rules": {}
+  "rules": {
+    "prettier/prettier": ["warn", { "endOfLine": "auto" }]
+  }
 }
